--- a/assets/main.css
+++ b/assets/main.css
@@ -1,11 +1,10 @@
 body{
-	/*background-color: black;*/
+	background-color: #fff;
 }
 
 div{
 	background-color: black;
-	/*font-style: bold;*/
-/*font-family: cursive;*/
+
 	color: white;
 	font-size: 1.6em;
 	border: 5px skyblue solid;
@@ -19,14 +18,21 @@ div{
 
 img{
 	border: 2px red solid;
+	size: auto;
 
 }
 
 a{
-	color: yellow;
+	color: white;
+	text-decoration: none;
+
 }
 
-input[type="submit"]{
-	color: white;
-	background-color: black;
+a:hover{
+	text-decoration: underline;
+}
+
+h1{
+	color: red;
+	font-family: sans-serif;
 }
