--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
 	<title>Login</title>
 </head>
 <body>
+	
+
+	<link rel="stylesheet" type="text/css" href="{% static 'login.css'%}">
+	<div class="login">
 	<form action="/login/" method="post">{% csrf_token %}
 		Username: <input type="text" name="nm"><br>
-		Password: <input type="Password" name="pass"><br><input type="submit" value="Login">
+		Password: <input type="Password" name="pass"><br><input type="submit" value="Login"></div>
 	</form>
+
+
+	<div class="signup">
 	<form action="signup/" method="post">{% csrf_token %}
 			
-			if you don't have a account just type your email and not Username or Password
+			if you don't have a account just type your email and not Username or Password<br>
 			Email: <input type="text" name="email"><br>
 			
 			<input type="submit" value="Sign Up">
-	</form>
+	</form></div>
 
 </body>
 </html>
