--- a/static/main.css
+++ b/static/main.css
@@ -25,7 +25,6 @@ img{
 a{
 	color: white;
 	text-decoration: none;
-
 }
 
 a:hover{
@@ -33,6 +32,7 @@ a:hover{
 }
 
 h1{
-	color: red;
+
 	font-family: sans-serif;
+	background-color: black;
 }
