--- a/templates/firstlog.html
+++ b/templates/firstlog.html
@@ -1,5 +1,5 @@
 Congragulations, you signed up! Just Enter your name and password to get started
-
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <form action="/join/" method="post">{% csrf_token %}
 Username: <input type="text" name="nm"><br>
 Password: <input type="Password" name="pass"><br><input type="submit" value="Login">
