--- a/templates/give.html
+++ b/templates/give.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	{% block content %}
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<form action="/check/{{OTP}}/" method="post">{% csrf_token %}
 		Write your otp here : <input type="number" name="otp">
 		<input type="submit" value="Give">
