--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	
-
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="{% static 'login.css'%}">
 	<div class="login">
 	<form action="/login/" method="post">{% csrf_token %}
