--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
 		line-height: 1.6em;
 		display: block;
 	}</style>
-	<h2>Spyler Store - Get Anything you want</h2>
+	<h2>Spyler Store - Get Anything you want <a href="cart/">cart</a></h2>
 		
 
 	<div class="harry1" align="">
